--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+
+
+StrainAlpha/Assets/Resources/FMODStudioCache.asset
+StrainAlpha/Assets/Resources/FMODStudioSettings.asset
+StrainAlpha/Assets/StreamingAssets/Master Bank.bank
