--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ sysinfo.txt
 StrainAlpha/Assets/Resources/FMODStudioCache.asset
 StrainAlpha/Assets/Resources/FMODStudioSettings.asset
 StrainAlpha/Assets/StreamingAssets/Master Bank.bank
+StrainAlpha/Assets/Resources/New Text Document.txt
