Finally fixed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ sysinfo.txt
 
 
 
-StrainAlpha/Assets/Resources/FMODStudioCache.asset
+
+StrainAlpha/Assets/Resources/FMODStudioCache.asset.meta
 StrainAlpha/Assets/Resources/FMODStudioSettings.asset
 StrainAlpha/Assets/StreamingAssets/Master Bank.bank
-StrainAlpha/Assets/Resources/New Text Document.txt
