Fixed my personal fmod

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ sysinfo.txt
 StrainAlpha/Assets/Resources/FMODStudioCache.asset.meta
 StrainAlpha/Assets/Resources/FMODStudioSettings.asset
 StrainAlpha/Assets/StreamingAssets/Master Bank.bank
+StrainAlpha/Assets/Resources/FMODStudioCache.asset
