Added knockback to player bullets

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ StrainAlpha/Assets/Resources/FMODStudioSettings.asset
 StrainAlpha/Assets/StreamingAssets/Master Bank.bank
 StrainAlpha/Assets/Resources/FMODStudioCache.asset
 StrainAlpha/Assets/StreamingAssets/Master Bank.bank.meta
+StrainAlpha/Assets/StreamingAssets.meta
+StrainAlpha/Assets/StreamingAssets/Master Bank.strings.bank
+StrainAlpha/Assets/StreamingAssets/Master Bank.strings.bank.meta
