Added a bit of colour blending to the nucleus

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ StrainAlpha/Assets/StreamingAssets/Master Bank.bank.meta
 StrainAlpha/Assets/StreamingAssets.meta
 StrainAlpha/Assets/StreamingAssets/Master Bank.strings.bank
 StrainAlpha/Assets/StreamingAssets/Master Bank.strings.bank.meta
+StrainAlpha/Assets/Resources/FMODStudioSettings.asset.meta
+StrainAlpha/fmod.log
